<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/ism_white"
    >

  <View
      android:id="@+id/vPeek"
      android:layout_margin="@dimen/ism_dp_20"
      android:layout_width="@dimen/ism_dp_80"
      android:layout_height="@dimen/ism_dp_4"
      android:layout_centerHorizontal="true"
      android:background="@drawable/ism_peek_rectangle"
      />


    <RelativeLayout
        android:layout_below="@+id/vPeek"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@color/ism_white"
        android:id="@+id/rlToolbar"
        >

      <androidx.appcompat.widget.AppCompatTextView
          android:id="@+id/tvMeetingTitle"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="64dp"
          android:layout_toStartOf="@+id/tvAdd"
          android:layout_marginTop="@dimen/ism_dp_5"
          android:text="@string/ism_add_meeting_title"
          android:textColor="@color/ism_black"
          android:gravity="center_horizontal"
          android:textSize="17sp"
          android:ellipsize="end"
          android:maxLines="1"
          android:textStyle="bold"
          />

      <androidx.appcompat.widget.AppCompatTextView
          android:id="@+id/tvMembersCount"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_below="@+id/tvMeetingTitle"
          android:layout_marginTop="@dimen/ism_dp_1"
          android:ellipsize="end"
          android:maxLines="1"
          android:layout_marginStart="64dp"
          android:gravity="center_horizontal"
          android:text="@string/ism_add_participants"
          android:layout_toStartOf="@+id/tvAdd"
          android:textColor="@color/ism_black"
          />

      <androidx.appcompat.widget.AppCompatTextView
          android:id="@+id/tvAdd"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_centerVertical="true"
          android:text="@string/ism_add"
          android:layout_alignParentEnd="true"
          android:textSize="@dimen/ism_sp_16"
          android:paddingStart="@dimen/ism_dp_13"
          android:paddingEnd="@dimen/ism_dp_13"
          android:paddingTop="@dimen/ism_dp_5"
          android:paddingBottom="@dimen/ism_dp_5"
          android:layout_marginEnd="@dimen/ism_dp_13"
          android:textStyle="bold"
          android:background="@drawable/ism_add_remove_background"
          android:textColor="@color/ism_select_text_blue"
          />


      <View
          android:layout_width="match_parent"
          android:layout_height="@dimen/ism_dp_1"
          android:layout_alignParentBottom="true"
          android:background="@color/ism_line_gray"
          />

    </RelativeLayout>

  <RelativeLayout
      android:id="@+id/rlSearch"
      android:layout_below="@+id/rlToolbar"
      android:layout_width="wrap_content"
      android:background="@drawable/ism_search_background"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/ism_dp_8"
      android:layout_marginBottom="@dimen/ism_dp_8"
      android:layout_marginStart="@dimen/ism_dp_16"
      android:layout_marginEnd="@dimen/ism_dp_16"
      android:elevation="@dimen/ism_dp_1"
      >

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ism_search_participants_to_add"
        android:maxLength="100"
        android:maxLines="3"
        android:paddingBottom="@dimen/ism_dp_10"
        android:paddingStart="@dimen/ism_dp_16"
        android:paddingEnd="@dimen/ism_dp_16"
        android:paddingTop="@dimen/ism_dp_10"
        android:textColor="@color/ism_hint_grey"
        android:textColorHint="@color/ism_hint_grey"
        android:textSize="@dimen/ism_sp_14"
        android:background="@drawable/ism_search_background"
        />
  </RelativeLayout>

  <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/rvUsersSelected"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/rlSearch"
      android:layout_marginEnd="9dp"
      />

  <View
      android:id="@+id/vSeperator"
      android:layout_width="match_parent"
      android:layout_height="@dimen/ism_dp_1"
      android:layout_below="@+id/rvUsersSelected"
      android:layout_marginEnd="@dimen/ism_dp_13"
      android:layout_marginStart="@dimen/ism_dp_13"
      android:background="@color/ism_line_gray"
      />

  <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
      android:id="@+id/refresh"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_below="@+id/vSeperator"
      >

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvUsers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbarStyle="outsideInset" />

  </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

  <com.facebook.shimmer.ShimmerFrameLayout
      android:id="@+id/shimmerFrameLayout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/vSeperator"
      android:visibility="gone"
      >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

      <include layout="@layout/ism_unselected_member_item_shimmer" />
      <include layout="@layout/ism_unselected_member_item_shimmer" />
      <include layout="@layout/ism_unselected_member_item_shimmer" />
      <include layout="@layout/ism_unselected_member_item_shimmer" />
      <include layout="@layout/ism_unselected_member_item_shimmer" />
      <include layout="@layout/ism_unselected_member_item_shimmer" />

    </LinearLayout>
  </com.facebook.shimmer.ShimmerFrameLayout>

  <androidx.appcompat.widget.AppCompatTextView
      android:id="@+id/tvNoUsers"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:drawablePadding="@dimen/ism_dp_8"
      app:drawableTopCompat="@drawable/ism_ic_no_users"
      android:gravity="center"
      android:text="@string/ism_no_participants_to_add"
      android:textColor="@color/ism_black"
      android:layout_below="@+id/vSeperator"
      android:visibility="gone"
      />
</RelativeLayout>
