<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/ism_white"
    >
  <com.google.android.material.appbar.AppBarLayout
      android:id="@+id/abLayout"
      android:background="@color/ism_white"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      style="@style/ThemeOverlay.AppCompat.ActionBar"
      >
    <com.google.android.material.appbar.CollapsingToolbarLayout
        app:layout_scrollFlags="scroll|exitUntilCollapsed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

      <RelativeLayout
          android:layout_marginTop="132dp"
          app:layout_collapseMode="parallax"
          app:layout_collapseParallaxMultiplier="1"
          android:id="@+id/rlSearch"
          android:layout_width="match_parent"
          android:background="@drawable/ism_search_background"
          android:layout_height="wrap_content"
          android:layout_marginBottom="@dimen/ism_dp_20"
          android:layout_marginStart="@dimen/ism_dp_16"
          android:layout_marginEnd="@dimen/ism_dp_16"
          android:elevation="@dimen/ism_dp_1"
          >

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ism_search_messages_hint"
            android:maxLength="100"
            android:maxLines="3"
            android:paddingBottom="@dimen/ism_dp_10"
            android:paddingStart="@dimen/ism_dp_16"
            android:paddingEnd="@dimen/ism_dp_16"
            android:paddingTop="@dimen/ism_dp_10"
            android:textColor="@color/ism_hint_grey"
            android:textColorHint="@color/ism_hint_grey"
            android:textSize="@dimen/ism_sp_14"
            android:background="@drawable/ism_search_background"
            />
      </RelativeLayout>

      <androidx.appcompat.widget.Toolbar
          app:contentInsetStart="@dimen/ism_dp_0"
          app:contentInsetStartWithNavigation="@dimen/ism_dp_0"
          android:layout_width="match_parent"
          android:layout_height="132dp"
          app:layout_collapseMode="pin" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
        <View
            android:id="@+id/vPeek"
            android:layout_margin="@dimen/ism_dp_20"
            android:layout_width="@dimen/ism_dp_80"
            android:layout_height="@dimen/ism_dp_4"
            android:layout_centerHorizontal="true"
            android:background="@drawable/ism_peek_rectangle"
            />

        <TextView
            android:id="@+id/tvMessages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/ism_sp_16"
            android:textColor="@color/ism_black"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/ism_dp_5"
            android:layout_marginStart="44dp"
            android:layout_marginEnd="44dp"
            android:textStyle="bold"
            android:maxLines="3"
            android:text="@string/ism_messages"
            android:ellipsize="end"
            android:layout_below="@+id/vPeek"
            />

          <TextView
              android:id="@+id/tvSendMessage"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textSize="@dimen/ism_sp_16"
              android:textColor="@color/ism_black"
              android:text="@string/ism_send_message"
              android:layout_marginStart="@dimen/ism_dp_16"
              android:layout_marginEnd="@dimen/ism_dp_16"
              android:layout_marginTop="@dimen/ism_dp_20"
              android:maxLines="1"
              android:ellipsize="end"
              android:layout_below="@+id/tvMessages"
              />

          <androidx.appcompat.widget.AppCompatImageView
              android:id="@+id/ivMessage"
              app:srcCompat="@drawable/ism_ic_send"
              app:tint="@color/ism_black"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignParentEnd="true"
              android:paddingStart="@dimen/ism_dp_16"
              android:paddingEnd="@dimen/ism_dp_16"
              android:paddingTop="@dimen/ism_dp_16"
              android:layout_alignBottom="@id/tvSendMessage"
              />
        </RelativeLayout>
      </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.CollapsingToolbarLayout>
  </com.google.android.material.appbar.AppBarLayout>


  <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
      android:id="@+id/refresh"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_behavior="@string/appbar_scrolling_view_behavior"
      android:layout_marginBottom="132dp"
      >
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvMessages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="132dp"
        />
  </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


  <TextView
      android:id="@+id/tvNoMessages"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:drawablePadding="@dimen/ism_dp_8"
      app:drawableTopCompat="@drawable/ism_ic_no_users"
      android:gravity="center_horizontal"
      app:layout_behavior="@string/appbar_scrolling_view_behavior"
      android:layout_margin="@dimen/ism_dp_36"
      android:text="@string/ism_no_messages"
      android:textColor="@color/ism_white"
      android:visibility="gone"
      />

  <com.facebook.shimmer.ShimmerFrameLayout
      android:id="@+id/shimmerFrameLayout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_behavior="@string/appbar_scrolling_view_behavior"
      android:layout_marginTop="@dimen/ism_dp_13"
      >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

      <include layout="@layout/ism_text_message_item_shimmer" />
      <include layout="@layout/ism_text_message_item_shimmer" />

    </LinearLayout>
  </com.facebook.shimmer.ShimmerFrameLayout>

  <RelativeLayout
      android:id="@+id/rlSendMessage"
      android:layout_width="wrap_content"
      android:layout_marginBottom="@dimen/ism_dp_20"
      android:layout_marginStart="@dimen/ism_dp_24"
      android:layout_marginEnd="@dimen/ism_dp_24"
      android:background="@drawable/ism_sendmessage_background"
      android:layout_height="wrap_content"
      android:elevation="@dimen/ism_dp_1"
      android:visibility="gone"
      android:layout_gravity="bottom"
      >

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etSendMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ism_send_message_hint"
        android:maxLength="100"
        android:maxLines="3"
        android:paddingBottom="@dimen/ism_dp_10"
        android:paddingLeft="@dimen/ism_dp_16"
        android:paddingRight="@dimen/ism_dp_16"
        android:paddingTop="@dimen/ism_dp_10"
        android:textColor="@color/ism_hint_grey"
        android:textColorHint="@color/ism_hint_grey"
        android:textSize="@dimen/ism_sp_14"
        android:background="@drawable/ism_sendmessage_background"
        android:layout_toStartOf="@+id/ivSendMessage"
        />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivSendMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/ism_dp_1"
        android:padding="@dimen/ism_dp_8"
        android:layout_centerVertical="true"
        app:srcCompat="@drawable/ism_ic_send"
        android:tint="@color/ism_hint_grey"
        />
  </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
